added html css files

--- a/QUIZ 1/css/main.css
+++ b/QUIZ 1/css/main.css
@@ -1,15 +1,17 @@
 
 body{
-	 background-color:violet;
+	 background-color:rgb(225,0,25);
 }
+
+
 
 
 h1{
    border-style: solid;
    border-width: 20px;
-   background-color: blue;
+   background-color: white;
    padding: 20px;
-   text-align: right;
+   text-align: left;
 }
 
 p{
@@ -19,6 +21,11 @@ p{
   font-weight: bold;
   font-variant: normal;
   border-style: dotted dashed solid double;
-
 }
 
+.cities {
+  background-color: blue;
+  color: white;
+  margin: 20px;
+  padding: 20px;
+} 
