--- a/IRENE MWANGI RESUME/css/main.css
+++ b/IRENE MWANGI RESUME/css/main.css
@@ -13,7 +13,7 @@ body{
 }
 /*<!-- Start_Hero -->*/
 .div_hero{
-	background: url(../img/first_imagec.jpg),repeat,center center;
+	background: url(../img/green_p.jpg),repeat,center center;
 	background-size: cover;
 	padding: 15% 0;
 }
@@ -77,7 +77,7 @@ body{
 .div_info .panel{
 	width: 380px;
 	float: left;
-	padding: 10px ;
+	padding: 10px;
 	text-align: justify-all;
 
 }
@@ -107,7 +107,7 @@ body{
 	width: 100%;
 	min-height: 200px;
 	background-color: #f2f2f2;
-	text-align: justify;uu
+	text-align: justify;
 
 }
 
@@ -545,6 +545,9 @@ footer{
 .icons{
 	margin:0 auto;
 }
+
+/*end_foooter*/
+
 /*start_media_query*/
 @media only screen and (max-width: 824px){
 	.hero h1{
